packages/errors/test/__snapshots__/CONFIG_VALIDATION_MSG_ERROR - noFileType.ansi
[31mAn invalid configuration value was set:[39m
[31m[39m
[31m[33m`something` was not right[39m[31m[39m